--- a/terrace/top.html
+++ b/terrace/top.html
@@ -4,9 +4,10 @@
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <link rel="icon" href="favicon.png" type="image/icon type">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-   <title>Document</title>
+   <title>Shikshaverse</title>
 </head>
 
 <style>
@@ -50,6 +51,24 @@
     position: absolute;
     display: none;
 }
+#Hostel{
+   margin-left: 43.4%;
+    margin-top: 17%; 
+    position: absolute;
+    display: none;
+}
+#contact{
+   margin-left: 43.4%;
+    margin-top: 17%; 
+    position: absolute;
+    display: none;
+}
+#travel{
+   margin-left: 43.4%;
+    margin-top: 17%; 
+    position: absolute;
+    display: none;
+}
 </style>
 
 <body onload="scrollTo(0,10000)" class="body" style="padding:0px; margin: 0%; justify-content: center; background-color: skyblue;">
@@ -82,6 +101,15 @@
        <div id="streetview" class="streetview alert alert-light" role="alert">
          Press S to Street View
        </div>
+       <div id="contact" class="contact alert alert-light" role="alert">
+         Press T to Contact Details
+       </div>
+       <div id="Hostel" class="Hostel alert alert-light" role="alert">
+         Press H to Hostel Details
+       </div>
+       <div id="travel" class="travel alert alert-light" role="alert">
+         Press V to Nearest Travelling Route
+       </div>
 </body>
 
 </html>
@@ -91,6 +119,7 @@
   left: 0, 
   behavior: 'smooth'
 });
+
 function disableScroll() {
     // Get the current page scroll position
     scrollTop = window.pageYOffset || document.documentElement.scrollTop;
@@ -106,10 +135,7 @@ function enableScroll() {
     window.onscroll = function() {};
 }
 
-   function onloaddiv(params) {
-      let scroll_to_bottom = document.getElementById('top');
-		scroll_to_bottom.scrollTop = scroll_to_bottom.scrollHeight;
-   }
+   
    function showhide(object) {
              document.getElementById(object).style.display = "block";
              disableScroll()
@@ -127,6 +153,7 @@ function enableScroll() {
    document.getElementById("up").style.marginTop = margin_top + "%";
    document.onkeydown = function (event) {
       enableScroll()
+      // scrollTo(0,margin_top*10)
 
       document.getElementById("website").style.display = "none"
       document.getElementById("library").style.display = "none"
@@ -134,6 +161,10 @@ function enableScroll() {
       document.getElementById("threeD").style.display = "none"
       document.getElementById("courselist").style.display = "none"
       document.getElementById("streetview").style.display = "none"
+      document.getElementById("contact").style.display = "none"
+      document.getElementById("Hostel").style.display = "none"
+      document.getElementById("travel").style.display = "none"
+
 
 
       if ((margin_top <= 27 && margin_left < 81 && margin_left > 57)) {
@@ -148,7 +179,7 @@ function enableScroll() {
          console.log("Back to home");
          showhide("back");
       }
-      if ((margin_top >= 53 && margin_top < 68 && margin_left > 77)) {
+      if ((margin_top >= 67 && margin_left < 24)) {
          console.log("View in 3D");
          showhide("threeD");
       }
@@ -159,6 +190,18 @@ function enableScroll() {
       if ((margin_top <= 26 && margin_left < 54 && margin_left > 38)) {
          console.log("Street View");
          showhide("streetview");
+      }
+      if ((margin_top >= 66 && margin_left > 26 && margin_left < 40) ) {
+         console.log("Contact Details");
+         showhide("contact");
+      }
+      if ((margin_top > 39 &&  margin_top < 51 && margin_left >= 66)) {
+         console.log("Hostel View");
+         showhide("Hostel");
+      }
+      if ((margin_top <= 67 &&  margin_top >= 60 && margin_left >= 66)) {
+         console.log("Travelling Route");
+         showhide("travel");
       }
       if ((margin_top > 70 )) {
          console.log("Disable Scroll");
@@ -192,7 +235,7 @@ function enableScroll() {
             break;
 
          case 37:
-            if (margin_left > 11 && ((margin_top < 37 || margin_top >54) || margin_left != 27) && (margin_top > 25 || margin_left != 79) && (margin_top >=55 || margin_top < 70 || margin_left < 79)) {
+            if (margin_left > 11 && ((margin_top < 37 || margin_top >54) || margin_left != 27) && (margin_top > 25 || margin_left != 79) && (margin_top >=55 || margin_top < 70 || margin_left < 79) && (margin_top <= 67 || (margin_left <= 24 || margin_left >= 38))) {
                document.getElementById("down").style.display = "none";
                document.getElementById("up").style.display = "none";
                document.getElementById("left").style.display = "block";
@@ -205,7 +248,7 @@ function enableScroll() {
             
             break;
          case 38:
-            if (margin_top > 24 && (margin_top != 25 || (margin_left >= 79|| margin_left <= 59))  && (margin_top != 54 || margin_left > 27) && (margin_top != 66 || margin_left < 79)) {
+            if (margin_top > 24 && (margin_top != 25 || (margin_left >= 79|| margin_left <= 59))  && (margin_top != 54 || margin_left > 27) && (margin_top != 66 || margin_left < 69)) {
                document.getElementById("down").style.display = "none";
                document.getElementById("up").style.display = "block";
                document.getElementById("left").style.display = "none";
@@ -219,7 +262,7 @@ function enableScroll() {
             break;
 
          case 39:
-            if (margin_left < 84 && (margin_top >= 25  || margin_left < 60) && ((margin_top <=55 || margin_top > 66)|| margin_left < 79)) {
+            if (margin_left < 84 && (margin_top >= 25  || margin_left < 60) && ((margin_top <=42 || margin_top > 66)|| margin_left < 69)) {
                document.getElementById("down").style.display = "none";
                document.getElementById("up").style.display = "none";
                document.getElementById("left").style.display = "none";
@@ -233,7 +276,7 @@ function enableScroll() {
             }
             break;
          case 40:
-            if (margin_top < 81  && (margin_top != 37 || margin_left > 27)&&(margin_top != 55 || margin_left <= 79)) {
+            if (margin_top < 79  && (margin_top != 37 || margin_left > 27)&&(margin_top != 42 || margin_left <= 69)&&(margin_top != 67 || margin_left >= 24)&&(margin_top != 67 || (margin_left <= 24||margin_left >= 37))) {
                document.getElementById("down").style.display = "block";
                document.getElementById("up").style.display = "none";
                document.getElementById("left").style.display = "none";
@@ -250,5 +293,14 @@ function enableScroll() {
             break;
       }
    };
+   
+
+   setInterval(() => {
+   window.scroll({
+  top: margin_top*10, 
+  left: 0, 
+  behavior: 'smooth'
+});
+}, 2000);
 
 </script>
